--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,10 @@ language: python
 python:
   - "2.7"
 install:
-  - sudo apt-get install dmd
+  - sudo wget http://downloads.dlang.org.s3-website-us-east-1.amazonaws.com/releases/2013/dmd_2.063.2-0_amd64.deb
+  - sudo apt-get update
+  - sudo apt-get install gcc-multilib
+  - sudo dpkg -i dmd_2.063.2-0_amd64.deb
   - sudo wget http://code.dlang.org/files/dub-0.9.19-linux-x86_64.tar.gz
   - sudo tar zxvf dub*
 script: PATH=.:$PATH dub --build=unittest --config=unittest
