--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "dejector",
 	"description": "D Dependency Injection Framework",
+	"license": "MIT",
 	"homepage": "https://github.com/jstasiak/dejector",
 	"copyright": "Copyright © 2013, Jakub Stasiak",
 	"authors": [
