--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ install:
   - sudo apt-get -y --allow-unauthenticated install --reinstall d-apt-keyring
   - sudo apt-get update
   - sudo apt-get install gcc-multilib dub dmd-bin
-script: ./runtests
+script: dub --verbose test
